data/derived/fa15/progs/unify/prog2184.ml.out
Characters 181-183:
  in wwhile(gs, b);;
            ^^
Error: This expression has type (int -> int) -> int -> int
       but an expression was expected of type
         (int -> int) -> (int -> int) * bool
       Type int -> int is not compatible with type (int -> int) * bool 
